# news-aggregator

./: .funcignore  .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt  sample_data.py  sample_headlines.txt  sample_results.txt  test.py
.github/workflows/: main_naivegazeta-storeheadlines(staging).yml  main_news-aggregator(dev).yml
src/: main.py
