# DO NOT include azure-functions-worker in this file
# The Python Worker is managed by Azure Functions platform
# Manually managing azure-functions-worker may cause unexpected issues

[project]
name = "news-aggregator"
version = "0.1.0"
description = "Aggregates news articles from various sources and provides historical context and root cause analysis using AI. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-textanalytics==5.3.0",
    "azure-cosmos>=4.9.0",
    "azure-functions>=1.23.0",
    "dotenv>=0.9.9",
    "newsapi-python==0.2.7",
]
